@@ -1,3 +1,8 @@
+2014-08-01  Igor Zamyatin  <igor.zamyatin@intel.com>
+
+	PR other/61963
+	* c-c++-common/cilk-plus/AN/pr61963.c: New test.
+
 2014-07-08  Igor Zamyatin  <igor.zamyatin@intel.com>
 
 	PR middle-end/61455
